Add result page for searching
新增搜尋結果的頁面雛形，改良一點外觀

--- a/web/main.html
+++ b/web/main.html
@@ -11,14 +11,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href=" https://fonts.googleapis.com/css?family=Noto+Sans+TC" type='text/css'>
     <link rel="stylesheet" href="css/main.css" id="maincss">
-    <script>
-        
-    </script>
+
 </head>
 
 <body>
     <div class="jumbotron text-center" style="margin-bottom:0">
-        <h1 id='main_title'>文藝表演及活動資訊查詢平台</h1>
+        <h1 class='main_title'>文藝表演及活動資訊查詢平台</h1>
         <p>Final Project - Group34 <br> 0511052 李其芳 0510141 何宜真 0516238 黃柏維 0616042 呂明哲</p>
     </div>
 
@@ -91,12 +89,13 @@
 
 
                         <!--    北部欄位     -->
-                        <div class="form-check-inline">
-                            <label class="form-check-label" for="checkN1">
+
+                        <div class="form-check-inline north">
+                            <label class="form-check-label north" for="checkN1">
                                 <input type="checkbox" class="form-check-input" id="checkN1" name="district" value="Taipei">台北市
                             </label>
                         </div>
-                        <div class="form-check-inline">
+                        <div class="form-check-inline north">
                             <label class="form-check-label north" for="checkN2">
                                 <input type="checkbox" class="form-check-input" id="checkN2" name="district" value="New_Taipei">新北市
                             </label>
@@ -458,4 +457,5 @@
     </div>
 
 
-</body></html>
+</body>
+</html>
