--- a/web/result_page.html
+++ b/web/result_page.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href=" https://fonts.googleapis.com/css?family=Noto+Sans+TC" type='text/css'>
     <link rel="stylesheet" href="css/main.css" id="maincss">
+    <script
 </head>
 
 <body>
@@ -107,11 +108,6 @@
                 <div class="form-check-inline">
                     <label class="form-check-label" for="check_cat14">
                         <input type="checkbox" class="form-check-input" id="check_cat14" name="title" value="徵選活動">徵選活動
-                    </label>
-                </div>
-                <div class="form-check-inline">
-                    <label class="form-check-label" for="check_cat15">
-                        <input type="checkbox" class="form-check-input" id="check_cat15" name="title" value="其他藝文資訊">其他藝文資訊
                     </label>
                 </div>
                 <div class="form-check-inline">
