update html style
改jumbotron和navebar的部分以及連結

--- a/web/main.html
+++ b/web/main.html
@@ -17,10 +17,11 @@
 <body>
     <div class="jumbotron text-center" style="margin-bottom:0">
         <h1 class='main_title'>文藝表演及活動資訊查詢平台</h1>
-        <p>Final Project - Group34 <br> 0511052 李其芳 0510141 何宜真 0516238 黃柏維 0616042 呂明哲</p>
+        <p class='group_info'>Final Project - Group34 <br> 0511052 李其芳 0510141 何宜真 0516238 黃柏維 0616042 呂明哲</p>
     </div>
 
 
+<!--
     <nav class="navbar navbar-expand-sm bg-light navbar-light">
         <a class="navbar-brand" href="#">首頁</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -46,6 +47,7 @@
             </ul>
         </div>
     </nav>
+-->
 
 
     <div class="container" style="margin-top:30px">
