--- a/web/search.html
+++ b/web/search.html
@@ -38,6 +38,12 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link" href="summary.html">當月統計</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="recommend.html">次月推薦</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="https://hackmd.io/@db-group34/H11syOiu8/edit">Hackmd</a>
                 </li>
                 <li class="nav-item">
@@ -66,7 +72,7 @@
 
             </ul>
         </div>
-        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <div class="navbar-collapse collapse  order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item justify-content-end justify-content-sm-end">
                     <a class="nav-link" href="">Group34 - 0511052 李其芳 0510141 何宜真 0516238 黃柏維 0616042 呂明哲</a>
@@ -275,8 +281,7 @@
                     <label class="form-check-label" for="checkE5">
                         <input type="checkbox" class="form-check-input" id="checkE5" name="district" value="Lienchiang">連江縣
                     </label>
-                </div>
-                <br>
+                </div>s
                 <br>
                 <h4>時間</h4>
                 <div class="form-row">
@@ -392,7 +397,6 @@
                     </div>
                 </div>
 
-                <br>
                 <br>
                 <button type="submit" class="btn btn-primary">搜尋</button>
             </form>
